--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 <body>
 	<div class="card">		
 		<h1>YES!!!</h1>
-		<h2>Thanks be to Dolly Parton</h2>
+		<h2>Thanks be to <a href="http://www.isdollypartonalive.com">Dolly Parton</a>!</h2>
 	</div>
 	<script>
 		fitty('h1');
