--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
 	<div class="card">		
 		<h1>YES!!!</h1>
 		<h2>Thanks be to <a href="http://www.isdollypartonalive.com">Dolly Parton</a>!</h2>
+		<img src="alive.gif" alt="">
 	</div>
 	<script>
 		fitty('h1');
