--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 	<div class="card">		
 		<h1>YES!!!</h1>
 		<h2>Thanks be to <a href="http://www.isdollypartonalive.com">Dolly Parton</a>!</h2>
-		<img src="alive.gif" alt="">
+		<img src="alive.gif" alt="Betty White doing the dab">
 	</div>
 	<script>
 		fitty('h1');
