remove bg color from html

--- a/index.html
+++ b/index.html
@@ -24,6 +24,9 @@
 			background-color: #ca6a8d;
 			color: #f0e5d6;
 		}
+		div.card {
+			background-color: #f0e5d6;
+		}
 		h1 {
 			margin: 0 0;
 			text-shadow: 8px 8px 0 #7a9c91;
