--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 		html {
 			margin: 0;
 			padding: 0;
+			background-color: #f0e5d6;
 		}
 		body {
 			margin: 20px 20px;
@@ -25,7 +26,7 @@
 			color: #f0e5d6;
 		}
 		div.card {
-			background-color: #f0e5d6;
+			background-color: #ca6a8d;
 		}
 		h1 {
 			margin: 0 0;
