--- a/index.html
+++ b/index.html
@@ -40,6 +40,9 @@
 			border: 10px solid #7a9c91;
 			width: 50%;
 		}
+		a, a.visited, a:hover {
+			color: #f0e5d6;
+		}
 	</style>
 </head>
 <body>
